fix: update broken internal links to prevent 404 errors

--- a/docs/docs/api/components/overview.mdx
+++ b/docs/docs/api/components/overview.mdx
@@ -69,7 +69,7 @@ import ComponentSpinnerImage from './img/am.spinner.png'
 - [am.image](../am.image) - traQ に画像を送信します
 - [am.dataframe](../am.dataframe) - pandas の DataFrame や Series を表として送信します
 - [am.pyplot](../am.pyplot) - Matplotlib の figure を画像として送信します
-- [am.spinner](./am.spinner) - ローディングスピナーを表示します
+- [am.spinner](../am.spinner) - ローディングスピナーを表示します
 - [am.clear](../am.clear) - traQ のメッセージをすべて削除します
 - [am.clear_message](../am.clear_message) - 特定のメッセージを削除します
 - [am.stamp](../am.stamp) - traQ のメッセージにスタンプを押します
